--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 body {
+    max-width: 1200px;
     font-family: "PT Sans", "Arial", sans-serif;
     font-style: normal;
     font-size: 14px;
@@ -22,6 +23,7 @@ body {
 .container-all {
     width: 1200px;
     margin: 0 auto;
+    box-shadow: 0 0 30px 10px rgb(242, 242, 242);
 }
 
 .clearfix::after {
@@ -259,7 +261,7 @@ body {
     background: #766357;
 }
 
-.search-form{
+.search-form {
     position: absolute;
     top: 85px;
     left: 0;
@@ -316,7 +318,7 @@ body {
     cursor: pointer;
 }
 
-.search-form .calendar::before{
+.search-form .calendar::before {
     content: "";
     display: inline-block;
     position: absolute;
@@ -435,7 +437,6 @@ body {
     height: 11px;
     background-position: -10px -294px;
 }
-
 
 .search-form .find-btn {
     display: block;
@@ -585,6 +586,7 @@ body {
     opacity: 0.3;
 }
 
+
 /* inner.html*/
 
 .catalog {
@@ -592,7 +594,7 @@ body {
 }
 
 .filter {
-	color: #ffffff;
+    color: #ffffff;
     background: #517ca4 url(../img/filter-background.jpg) 50% 50% no-repeat;
 }
 
@@ -622,7 +624,7 @@ body {
 }
 
 .inner {
-    width: 1055px;
+    width: 1056px;
     margin: 0 auto;
 }
 
@@ -638,40 +640,41 @@ body {
     line-height: 21px;
     text-transform: uppercase;
 }
-input[type="checkbox"]{
-	display: none;
+
+input[type="checkbox"] {
+    display: none;
 }
 
-input[type="checkbox"] + label{
-	display: block;
-	margin: 0;
-	margin-bottom: 21px;
-	padding-left: 32px;
-	position: relative;
-	cursor: pointer;
+input[type="checkbox"] + label {
+    display: block;
+    margin: 0;
+    margin-bottom: 21px;
+    padding-left: 32px;
+    position: relative;
+    cursor: pointer;
 }
 
-input[type="checkbox"] + label::before{
-	content: "";
-	position: absolute;
-	width: 22px;
+input[type="checkbox"] + label::before {
+    content: "";
+    position: absolute;
+    width: 22px;
     height: 22px;
     background: url(../img/spritesheet.png) no-repeat;
     background-position: -10px -94px;
-	top: 0;
-	left: 0;
+    top: 0;
+    left: 0;
 }
 
-input[type="checkbox"]:checked + label::after{
-	content: "";
-	width: 26px;
-	height: 22px;
-	background-color: #000000;
-	position: absolute;
-	background: url(../img/spritesheet.png) no-repeat;
+input[type="checkbox"]:checked + label::after {
+    content: "";
+    width: 26px;
+    height: 22px;
+    background-color: #000000;
+    position: absolute;
+    background: url(../img/spritesheet.png) no-repeat;
     background-position: -10px -136px;
-	top: 0;
-	left: 0;
+    top: 0;
+    left: 0;
 }
 
 .two-fourth {
@@ -711,21 +714,21 @@ input[type="checkbox"]:checked + label::after{
 }
 
 .results {
-    padding-top: 25px;
-    padding-bottom: 33px;
+    padding-top: 26px;
+    padding-bottom: 32px;
     border-bottom: 1px solid rgb(229, 229, 229);
 }
 
 .found {
-	display: inline-block;
-	width: 150px;
-    margin-right: 10px;
+    float: left;
+    width: 150px;
+    margin-right: 15px;
 }
 
 .found span {
-	display: inline-block;
-	vertical-align: bottom;
-	text-align: left;
+    display: inline-block;
+    vertical-align: bottom;
+    text-align: left;
     font-size: 21px;
     font-weight: 700;
     line-height: 26px;
@@ -733,26 +736,31 @@ input[type="checkbox"]:checked + label::after{
 }
 
 .sorting {
-	display: inline-block;
-	vertical-align: bottom;
-	text-align: center;
+    float: left;
     font-size: 12px;
     line-height: 18px;
 }
 
-.sorting ul {
+.sorting span {
 	display: inline-block;
 	vertical-align: bottom;
 	text-align: center;
+	padding-top: 8px;
+}
+
+.sorting ul {
+    display: inline-block;
+    vertical-align: bottom;
+    text-align: center;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
 .sorting li {
-	display: inline-block;
-	vertical-align: bottom;
-	text-align: center;
+    display: inline-block;
+    vertical-align: bottom;
+    text-align: center;
     padding-left: 29px;
     vertical-align: top;
 }
@@ -761,82 +769,72 @@ input[type="checkbox"]:checked + label::after{
     padding-left: 40px;
 }
 
-.sorting a{
-	text-decoration: none;
+.sorting a {
+    text-decoration: none;
     color: rgba(0, 0, 0, 0.3);
     border-bottom: 1px dotted #81b3d2;
 }
 
-.sorting .current{
+.sorting .current {
     color: #81b3d2;
     border-bottom: none;
     cursor: text;
 }
 
-.sorting a:hover{
-	color: #81b3d2;
+.sorting a:hover {
+    color: #81b3d2;
 }
 
-.sorting a:active{
-	color: #000000;
-	border: none;
+.sorting a:active {
+    color: #000000;
+    border: none;
 }
 
-.sorting-btn{
-    display: inline-block;
+.sorting-btn {
+    float: right;
     position: relative;
-    width: 34px;
-    margin-left: 496px;
-    vertical-align: bottom;
-    text-align: center;
+    width: 40px;
+    margin-left: 490px;
 }
 
-.sorting-btn a{
+.sorting-btn a {
     display: inline-block;
     vertical-align: bottom;
     text-align: center;
     font-size: 14px;
 }
 
-.up-icon::before{
+.up-icon::before {
     content: "";
     position: absolute;
     border: 7px solid transparent;
     border-bottom: 8px solid rgb(204, 204, 204);
-    display: inline-block;
-    vertical-align: bottom;
-    text-align: center;
-    width: 7px;
-    height: 8px;
-    top: 0;
-    left: 0;
-    margin-top: 8px;
+    display: block;
+    bottom: 5px;
+    left: 5px;
 }
 
-.up-icon:hover::before{
+.up-icon:hover::before {
     border: 7px solid transparent;
     border-bottom: 8px solid rgb(0, 0, 0);
 }
 
-.up-icon:active::before{
+.up-icon:active::before {
     border: 7px solid transparent;
     border-bottom: 8px solid #81b3d2;
 }
 
-.down-icon::before{
+.down-icon::before {
     content: "";
     position: absolute;
     border: 7px solid transparent;
     border-top: 8px solid #81b3d2;
     display: block;
-    width: 10px;
-    height: 10px;
-    top: 5px;
-    left: 25px;
-    margin-top: 8px;
+    top: 10px;
+    left: 26px;
 }
 
-.down-icon:hover::before{
+.down-icon:hover::before {
     border: 7px solid transparent;
     border-top: 8px solid rgb(0, 0, 0);
 }
@@ -893,7 +891,7 @@ input[type="checkbox"]:checked + label::after{
     margin-bottom: 12px;
 }
 
-.hotel-type span{
+.hotel-type span {
     display: inline-block;
     width: 110px;
     vertical-align: top;
@@ -928,7 +926,7 @@ input[type="checkbox"]:checked + label::after{
 
 .more-btn:active {
     background-color: #5496bd;
-    color: rgba(255, 255, 255 , 0.3);
+    color: rgba(255, 255, 255, 0.3);
 }
 
 .reserve-btn {
@@ -941,7 +939,7 @@ input[type="checkbox"]:checked + label::after{
 
 .reserve-btn:active {
     background-color: #503e33;
-    color: rgba(255, 255, 255 , 0.3);
+    color: rgba(255, 255, 255, 0.3);
 }
 
 .ratio-info {
@@ -955,13 +953,12 @@ input[type="checkbox"]:checked + label::after{
     padding-left: 15px;
     color: #666666;
     background-color: #f2f2f2;
-
 }
 
 .stars {
     display: block;
-    margin-bottom: 30px; 
-    text-align: right; 
+    margin-bottom: 33px;
+    text-align: right;
 }
 
 .star-icon {
@@ -970,7 +967,7 @@ input[type="checkbox"]:checked + label::after{
     vertical-align: top;
     text-align: right;
     width: 17px;
-    margin-left: 5px;
+    margin-left: 3px;
 }
 
 .star-icon::before {
